@@ -1,4 +1,4 @@
 DECL|function|checkUrl
 DECL|variable|ba
-DECL|variable|ftp
+DECL|variable|sock
 DECL|variable|url
