@@ -8,12 +8,11 @@ SUBDIRS=\
    qhttpnetworkconnection \
    qnetworkreply \
    qnetworkcachemetadata \
-   qftp \
    qhttpnetworkreply \
    qabstractnetworkcache \
 
 !contains(QT_CONFIG, private_tests): SUBDIRS -= \
           qhttpnetworkconnection \
           qhttpnetworkreply \
-
+          qftp \
 
