@@ -146,6 +146,9 @@ information about a particular change.
 - The QHttp, QHttpHeader, QHttpResponseHeader and QHttpRequestHeader classes have
   been removed, QNetworkAccessManager should be used instead.
 
+- The QFtp class is no longer exported, QNetworkAccessManager should be used
+  instead.
+
 - QProcess
 
   * On Windows, QProcess::ForwardedChannels will not forward the output of GUI
